# wasm-game-of-life

./: Cargo.toml  package.json
src/: lib.rs
www/: InternalRenderer2d.js  InternalRendererWebgl.js  app.js  color.js  getIndex.js  index.html  index.js  package-lock.json  package.json  renderer.js  settings.js  state.js  ui.js  utils.js  webpack.config.js
